<resources>
    <string name="app_name">PicPay</string>
    <string name="home_title">Contatos</string>
    <string name="home_search_hint">A quem você deseja pagar?</string>
    <string name="card_register_title">Cadastrar cartão</string>
    <string name="card_register_number_hint">Número do cartão</string>
    <string name="card_register_name_hint">Nome do titular</string>
    <string name="card_register_cvv_hint">CVV</string>
    <string name="card_register_expiration_hint">Vencimento</string>
    <string name="card_register_save_button">Salvar</string>
    <string name="card_register_priming_title">Cadastre um cartão\nde crédito</string>
    <string name="card_register_priming_content">Para fazer pagamentos para outras\npessoas você precisa cadastrar\num cartão de crédito pessoal.</string>
    <string name="card_register_priming_button">Cadastrar cartão</string>
    <string name="payment_edit_card_button">Editar</string>
    <string name="payment_button">Pagar</string>
    <string name="payment_value_hint">0,00</string>
    <string name="payment_currency">R$</string>
    <string name="payment_credit_card">**** **** **** %1$s</string>
    <string name="receipt_title">Recibo</string>
    <string name="receipt_id">Transação %1$d</string>
    <string name="receipt_credit_card">Cartão **** **** **** %1$s</string>
    <string name="receipt_total_label">Total pago</string>
    <string name="receipt_money">R$ %1$.2f</string>
    <string name="error">Ocorreu um erro. Tente novamente.</string>

</resources>
