<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/card_register_title"
        style="@style/ScreenTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/card_register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_register_number_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:theme="@style/EditTextWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_register_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789 "
            android:hint="@string/card_register_number_hint"
            android:inputType="number"
            android:maxLength="19" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_register_name_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:theme="@style/EditTextWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_register_number_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_register_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_register_name_hint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_register_expiration_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:theme="@style/EditTextWrapper"
        app:layout_constraintEnd_toStartOf="@+id/card_register_cvv_wrapper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_register_cvv_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_register_expiration_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_register_expiration_hint"
            android:inputType="date"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_register_cvv_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:theme="@style/EditTextWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_register_expiration_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/card_register_name_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_register_cvv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_register_cvv_hint"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/card_register_save_button"
        style="@style/PicPayButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/card_register_save_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>