<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_payment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/payment_picture"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/payment_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed" />

    <ProgressBar
        android:id="@+id/payment_picture_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/payment_picture"
        app:layout_constraintEnd_toEndOf="@+id/payment_picture"
        app:layout_constraintStart_toStartOf="@+id/payment_picture"
        app:layout_constraintTop_toTopOf="@+id/payment_picture" />

    <TextView
        android:id="@+id/payment_username"
        style="@style/ScreenContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/payment_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_picture"
        tools:text="\@username" />

    <TextView
        android:id="@+id/payment_currency"
        style="@style/PaymentCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/payment_currency"
        app:layout_constraintBottom_toBottomOf="@+id/payment_value"
        app:layout_constraintEnd_toStartOf="@+id/payment_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_value"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/payment_value"
        style="@style/PaymentValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:cursorVisible="false"
        android:hint="@string/payment_value_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/colorDetail"
        app:layout_constraintBottom_toTopOf="@+id/payment_edit_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/payment_currency"
        app:layout_constraintTop_toBottomOf="@+id/payment_username" />

    <View
        android:id="@+id/dot_divisor"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/dot_divisor"
        app:layout_constraintBottom_toBottomOf="@+id/payment_edit_card_button"
        app:layout_constraintEnd_toStartOf="@+id/payment_edit_card_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/payment_card"
        app:layout_constraintTop_toTopOf="@+id/payment_edit_card_button" />

    <TextView
        android:id="@+id/payment_card"
        style="@style/ScreenContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/payment_edit_card_button"
        app:layout_constraintEnd_toStartOf="@+id/dot_divisor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payment_edit_card_button"
        tools:text="Mastercard 1234" />

    <Button
        android:id="@+id/payment_edit_card_button"
        style="@style/SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/payment_edit_card_button"
        app:layout_constraintBottom_toTopOf="@+id/payment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot_divisor"
        app:layout_constraintTop_toBottomOf="@+id/payment_value" />

    <Button
        android:id="@+id/payment_button"
        style="@style/PicPayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/payment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_edit_card_button" />

</androidx.constraintlayout.widget.ConstraintLayout>